[package]
name = "crack"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"

[dev-dependencies]
tempfile = "3.8.1"
