[package]
name = "crack"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
implicit_hasher = "allow"

[dependencies]
anyhow = "1.0.75"
bimap = "0.6.3"
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.5.1"
petgraph = "0.6.4"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.8"

[dev-dependencies]
tempfile = "3.8.1"
